--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- strength section -->
             <div class="strength-container">
                 <p>strength</p>
-                <div data-indicator></div>
+                <div class="indicator" data-indicator></div>
             </div>
 
             <!-- generate password -->
